fix wrong font-weight (re #353)

--- a/wcc/featurable/static/style.css
+++ b/wcc/featurable/static/style.css
@@ -27,6 +27,5 @@
 
 }
 .date-location-size {
-    font-weight: bold;
     font-size: 12px;
 }
